# naersk

./: test.nix
test/cargo-release/: Cargo.toml
