[package]
name = "cargo-release"
version = "0.1.0"
authors = ["nicolas <nicolas@nmattia.com>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
regex = "1.1.8"

[package.metadata.release]
pre-release-replacements = [
	{file="README.md", search="predicates = .*", replace="{{crate_name}} = \"{{version}}\""},
]
